FINAL UPDATE GRAPHS2

--- a/report/Lab1 MetOpt.tex
+++ b/report/Lab1 MetOpt.tex
@@ -548,7 +548,7 @@
 			(-13.8155, 32)
 			(-16.1181, 37)
 			(-18.4207, 42)};
-		\addplot[yellow] coordinates {
+		\addplot[brown] coordinates {
 			 ( -6.907, 31)
 			(-9.21034, 31)
 			(-11.5129, 31)
@@ -556,12 +556,12 @@
 			(-16.1181, 37)
 			(-18.4207, 43)};
 		\addplot[black] coordinates {
-			( -6.907, 21)
-			(-9.21034, 29)
-			(-11.5129, 36)
-			(-13.8155, 41)
-			(-16.1181, 47)
-			(-18.4207, 52)};
+			( -6.907, 16)
+			(-9.21034, 24)
+			(-11.5129, 31)
+			(-13.8155, 36)
+			(-16.1181, 40)
+			(-18.4207, 44)};
 		\end{axis}
 	\end{tikzpicture}
 	
